# ChangeLog for sci-mathematics/gretl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.7 2008/01/12 19:54:36 bicatali Exp $

*gretl-1.7.1 (12 Jan 2008)

  12 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/gretl-1.6.5-nls.patch, -gretl-1.6.5.ebuild, +gretl-1.7.1.ebuild:
  Version bump

  06 Dec 2007; Sébastien Fabbro <bicatali@gentoo.org>
  +files/50gretl-gentoo.el, gretl-1.7.0.ebuild:
  Added emacs capability thanks to the emacs team (bug #201461).

  04 Dec 2007; Sébastien Fabbro <bicatali@gentoo.org> gretl-1.7.0.ebuild:
  Added einstall for gnome, closing bug #201238

*gretl-1.7.0 (04 Dec 2007)

  04 Dec 2007; Sébastien Fabbro <bicatali@gentoo.org> gretl-1.6.5.ebuild,
  +gretl-1.7.0.ebuild:
  Version bump

  21 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org> gretl-1.6.5.ebuild:
  Now force nls (see bug #198720), and do not force both shared and static (do it
  with EXTRA_ECONF)

  12 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org>
  +files/gretl-1.6.5-cli.patch, +files/gretl-1.6.5-nls.patch,
  gretl-1.6.5.ebuild:
  Fixed build without nls (bug #198720) and propagate some flags in the
  command line Makefile.

*gretl-1.6.5 (07 Nov 2007)

  07 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +gretl-1.6.5.ebuild:
  Initial import. Close bug #39966. Thanks everyone in the bug who helped.
