@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50gretl-gentoo.el 473 RMD160 3b16bc41fe78a2e8b02a6d02624e74ae1f9c656e SHA1 c992256afbde18e06f5fc3c70ca7e0c7dafafc87 SHA256 7f5398d85016858044257a900e33d9441aa7a3981ac1d71feff79c26b03aa939
 AUX gretl-1.6.5-cli.patch 1040 RMD160 acb538691db639c3afbfe5af1bfb910fe4aa82bc SHA1 9642fcec8ccd10c63f35abf7d6243cf28f8c8b28 SHA256 cd5a24d4227e772d0a544e3f059b12bef627189e1f52de4b9bcddc4dcc32be71
-DIST gretl-1.7.0.tar.bz2 4701532 RMD160 8722044b89a3a34f87532cd9b6367cbfb459b6b7 SHA1 8e0a4cc4e97b33b2fc12d1a3906320bef17b3b86 SHA256 388b6d37be3ef5a4f1333a568cbc5566199c2de872853e50216101241148eddc
 DIST gretl-1.7.1.tar.bz2 4748191 RMD160 fac615136468ac82e0e68b5caec340aae1a35f57 SHA1 427d4b7f95e7ce6fa5f3e6edc73f3a885048168a SHA256 3a9ac36536941a1ac958a154c27e2b4be825e711e52334bb94f4fa0325ce7fec
-EBUILD gretl-1.7.0.ebuild 2917 RMD160 dc27344425776febc16a4aa4729d348460dda23c SHA1 fc6a285d30cc1414430d3fb3880f56fb0dd00b76 SHA256 5d596b78783cb6497ab0ee9cad1bd5b6c3776af2ec570c2ded64c203c4145d26
+DIST gretl-1.7.2.tar.bz2 4810082 RMD160 693dbbc57d5445e4ccb097ca95c661a73d0da340 SHA1 7d9790fc44c12fe18d448e2d9ce9923b4a1edac2 SHA256 a5566db93acac0e27285a8ad92802c4daab293fb3b15f963da3324222350b683
 EBUILD gretl-1.7.1.ebuild 2917 RMD160 3bb1766c6c6fdb35848699ca3d0f87ef7aa68fb6 SHA1 7fe9d5b6441df2261e754590ad751f5d411b4730 SHA256 890f00ca8ba83c7b5f6161c2334d14340bed3510c46edeacb938f7aed746b53e
-MISC ChangeLog 1437 RMD160 5384ca6f8332f0bb70cd59ec3470a3d8fbcc5779 SHA1 a52a22edb3fb4099f21d95bb3b4ae193682e33c2 SHA256 0bd99014de33f4fc4d50e804ac4baa1ddf990debf264c4af124e5cefdf992554
-MISC metadata.xml 839 RMD160 f4b9cac664b9587c3a3aa323e1b4014f0d8ad94b SHA1 f683da43c497a9b61829471d577548472820914a SHA256 4461a2900e096e0c403904531321d68d2c0889632c12cde0ee2ace1151eb7de4
+EBUILD gretl-1.7.2.ebuild 2917 RMD160 2dc62ea5f76f98b1d1fa652ddafaebc05652edaa SHA1 4a4946deb45f55ba40ff730b07a222f7f73c87c0 SHA256 c3a1c553b143157b73a64e699f1e57a3996d977529329540fc49d4c29d3b4e89
+MISC ChangeLog 1615 RMD160 01c2103cbc93b081e3b1f0f54b0b5486879f9f89 SHA1 96aab71eed0a474bf9c884cdc977f3aa449d4483 SHA256 fd0c48846d6528fa9dd44d88fa76f539045cee1cc05ca029b2c7b4dbe16d8958
+MISC metadata.xml 850 RMD160 6a5e9256df07857bd82298296e8b2d71141dda8d SHA1 5c5c62dedefe8c45574ae0dd3a34e53b3f2e208e SHA256 d303ec89d9ffdb1cc1f3b1c7028d9d2c8b56b03fe9c7981b6fd588938e0917cb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHw+Ck1ycZbhPLE2ARAuiEAKCj6AR5wVdyS1n+DrC4GUzKUhFOSwCgkQju
+Czobp85JJfWxxRELB3e61h8=
+=MSza
+-----END PGP SIGNATURE-----
