@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/gretl
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.7 2008/01/12 19:54:36 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.8 2008/02/26 09:49:14 bicatali Exp $
+
+*gretl-1.7.2 (26 Feb 2008)
+
+  26 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
+  -gretl-1.7.0.ebuild, +gretl-1.7.2.ebuild:
+  Version bump. Closes bug #211474.
 
 *gretl-1.7.1 (12 Jan 2008)
 
